--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@actions/core": "^1.2.4",
     "@actions/github": "^4.0.0",
     "chunk": "0.0.2",
-    "readme-box": "git+https://git@github.com/JasonEtco/readme-box.git#main"
+    "readme-box": "git+https://git@github.com/Panquesito7/readme-box.git#eddiehub"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.24.0"
